<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_height="fill_parent"
   android:layout_width="fill_parent"
   android:padding="10dp"
   >
   <LinearLayout 
   		android:orientation="vertical"
   		android:layout_width="wrap_content"
   		android:layout_height="wrap_content"
   		android:layout_gravity="center"
   				
   	>
   	<TextView android:id="@+id/about_content"
   	    	  android:layout_width="wrap_content"
   	    	  android:layout_height="wrap_content"
   	    	  android:text="@string/about_content"
   	    />
   	
   	  <TextView android:layout_width="wrap_content"
         android:layout_marginTop="10dp" android:layout_height="wrap_content"
         android:text="@string/about_version" android:layout_gravity="center" />
   	  
      <TextView android:layout_width="wrap_content"
         android:layout_height="wrap_content" android:text="@string/about_copyright"
         android:layout_gravity="center" />
      
      <TextView android:layout_width="wrap_content"
         android:layout_height="wrap_content" android:text="@string/about_author_ww"
         android:layout_gravity="center" />
      
      <TextView android:id="@+id/project_url" android:layout_width="wrap_content"
         android:layout_height="wrap_content" android:text="@string/about_url"
         android:layout_gravity="center" android:textColor="@color/blue" />
<Button 
    android:id="@+id/okButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="10dp"
    android:width="100dp"
    android:text="ok"
    />
	<!-- <cn.domob.android.ads.DomobAdView
				android:id="@+id/domobAdXML" 
				android:layout_width="fill_parent" 
				android:layout_height="50dp"
				android:layout_gravity="bottom"
	/> -->
</LinearLayout>

</ScrollView>